--- a/src/index.html
+++ b/src/index.html
@@ -12,5 +12,6 @@
         <h1>General Kenobi</h1>
     <hr>
     <h2>1010100100100111100010010101111010101101001</h2>
+    <h3>New Text</h3>
     </body>
 </html>
