--- a/src/index.html
+++ b/src/index.html
@@ -13,5 +13,6 @@
     <hr>
     <h2>1010100100100111100010010101111010101101001</h2>
     <h3>New Text</h3>
+    <h3>New Text</h3>
     </body>
 </html>
